# JourneyOfDreams

./: .build_all.sh.kate-swp  .clang-format  .gitignore  .gitmodules  OLD.clang-format  README.md  build_all.sh  build_client.sh  build_container.sh  build_containers.sh  build_server.sh  build_web_client.sh  project.code-workspace  projects.code-workspace  run_all_in_one_server.sh  run_server.sh  run_server_containers.sh  run_servers_without_containers.sh
project/client/: CMakeLists.txt
project/client/src/: Main.cpp
project/client/src/Common/: SDLDeleter.cpp  SDLDeleter.h  Utilities.cpp
project/client/src/Core/: GameInstance.cpp  GameInstance.h
project/client/src/Core/Configuration/: GameProperties.cpp  GameProperties.h
project/client/src/Core/Engine/: DoOneGameLoopFrame.cpp  DoOneGameLoopFrame.h  Engine.cpp  Engine.h
project/client/src/Core/Engine/Graphics/: Graphics.cpp
project/client/src/Core/Engine/Input/: KeyboardInput.cpp  KeyboardInput.h
project/client/src/Core/Engine/Net/: Net.cpp  Net.h
project/client/src/Core/Engine/ScenesCore/: IScene.h  SceneManager.cpp  SceneManager.h
project/client/src/Core/Graphics/: Graphics.cpp  Graphics.h
project/client/src/Core/Rendering/Shaders/: DefaultShaderFragment.h
project/client/src/DefaultTheme/: RunNewGameInstance.cpp  RunNewGameInstance.h
project/client/src/DefaultTheme/Scenes/Intro/: IntroScene.cpp
project/client/src/DefaultTheme/Scenes/Main/: MainScene.h
project/client/src/DefaultTheme/Scenes/MainMenu/: MainMenuScene.h
project/client/stdafx/: StdAfx.h
project/server/: CMakeLists.txt
project/server/src/: Main.cpp  WebsocketServer.cpp
project/server/src/DB/: DB.cpp
project/server/src/Net/: RunNetServer.cpp  RunNetServer.h  WebsocketServer.cpp
project/web_client/: CMakeLists.txt
project/web_client/html/: shell_minimal.html.BACKUP
project/web_client/src/: Main.cpp
project/web_client/src/Common/: Aliases.h  SDLDeleter.cpp  SDLDeleter.h  Utilities.cpp  Utilities.h
project/web_client/src/Core/: GameInstance.cpp
project/web_client/src/Core/Configuration/: ConfigurationFile.cpp  ConfigurationFile.h
project/web_client/src/Core/Engine/: DoOneGameLoopFrame.cpp  Engine.cpp  Engine.h  PollEvents.cpp
project/web_client/src/Core/Engine/Assets/: ImageBank.cpp  ImageBank.h
project/web_client/src/Core/Engine/Cursor/: Cursor.cpp  Cursor.h  CursorStyles.h
project/web_client/src/Core/Engine/GUICore/: GUI.cpp  GUI.h  GUIAlign.h  GUIButton.cpp  GUIButton.h  GUILabel.cpp  GUILabel.h  GUIMessageBox.cpp  GUIMessageBox.h  GUIMovableWidget.cpp  GUIMovableWidget.h  GUIPanel.cpp  GUIPanel.h  GUITextBox.cpp  GUITextBox.h  GUIWidget.cpp  GUIWidget.h  GUIWindow.cpp  GUIWindow.h  ManagedTextLine.cpp  ManagedTextLine.h  ManagedTextString.cpp  ManagedTextString.h  WidgetEntry.h
project/web_client/src/Core/Engine/Graphics/: Graphics.cpp  Graphics.h
project/web_client/src/Core/Engine/Input/: KeyboardInput.cpp  KeyboardInput.h  MouseButton.cpp  MouseButton.h  MouseInput.h
project/web_client/src/Core/Engine/Net/: Net.cpp  Net.h  NetClient.h  NetworkConnection.cpp  NetworkConnection.h
project/web_client/src/Core/Engine/ScenesCore/: IScene.cpp  IScene.h  SceneManager.cpp  SceneManager.h
project/web_client/src/Core/WorldFileReading/: WorldFileReader.cpp
project/web_client/src/DefaultTheme/Scenes/Intro/: IntroScene.cpp  IntroScene.h
project/web_client/src/DefaultTheme/Scenes/Login/: LoginScene.cpp  LoginScene.h
project/web_client/src/DefaultTheme/Scenes/LoginNetRequest/: LoginNetRequestScene.cpp  LoginNetRequestScene.h
project/web_client/src/DefaultTheme/Scenes/LoginRequest/: LoginRequestScene.cpp  LoginRequestScene.h
project/web_client/src/DefaultTheme/Scenes/Main/: MainScene.cpp  MainScene.h
project/web_client/src/DefaultTheme/Scenes/MainMenu/: MainMenuScene.cpp  MainMenuScene.h
project/web_client/src/DefaultTheme/Scenes/Register/: RegisterScene.cpp  RegisterScene.h
project/web_client/src/DefaultTheme/Scenes/RegisterNetRequest/: RegisterNetRequestScene.cpp  RegisterNetRequestScene.h
project/web_client/stdafx/: StdAfx.h
projects/server/: CMakeLists.txt
projects/server/src/: Main.cpp
projects/server/src/DB/: DB.cpp  DB.h
projects/server/src/Net/: RunNetServer.cpp  RunNetServer.h  WebsocketServer.cpp  WebsocketServer.h
projects/server/stdafx/: StdAfx.h
projects/web_client/: CMakeLists.txt  web_client.code-workspace
projects/web_client/html/: shell_minimal.html
projects/web_client/resources/configuration/: settings.cfg
projects/web_client/src/: Main.cpp  MainNew.cpp
projects/web_client/src/Common/: Aliases.h  CustomDeleter.cpp  CustomDeleter.h  Hash.cpp  Hash.h  SDLDeleter.cpp  SDLDeleter.h  Square.h  Utilities.cpp  Utilities.h  custom_deleter.cpp  custom_deleter.h
projects/web_client/src/Core/: GameInstance.cpp  GameInstance.h
projects/web_client/src/Core/Configuration/: ClientProperties.cpp  ClientProperties.h  ConfigurationFile.cpp  ConfigurationFile.h
projects/web_client/src/Core/Engine/: DoOneGameLoopFrame.cpp  DoOneGameLoopFrame.h  Engine.cpp  Engine.h  PollEvents.cpp  PollEvents.h
projects/web_client/src/Core/Test/: Tester.cpp  Tester.h  Tester1.cpp  Tester1.h  Tester2.cpp  Tester2.h  Tester3.cpp  Tester3.h
projects/web_client/src/Core/Tests/: Test1.cpp  Test1.h  Test2.cpp  Test2.h  Test3.cpp  Test3.h
projects/web_client/src/Core/WorldFileReading/: WorldFileReader.cpp  WorldFileReader.h
projects/web_client/src/DefaultTheme/: RunNewGameInstance.cpp  RunNewGameInstance.h
projects/web_client/src/Development/: DeveloperSettings.h
projects/web_client/stdafx/: StdAfx.h
projects/world_generator/: CMakeLists.txt  world_generator.code-workspace
projects/world_generator/src/: Main.cpp
projects/world_generator/src/Generation/: GenerateNewWorld.cpp  GenerateNewWorld.h
projects/world_generator/src/Generation/SubProcess/: GenerateGrass.cpp  GenerateGrass.h  GenerateObjects.cpp  GenerateObjects.h  GenerateWater.cpp  GenerateWater.h
projects/world_generator/src/Saving/: WorldFileWriter.cpp  WorldFileWriter.h
projects/world_generator/stdafx/: StdAfx.h
(+197 files in other folders)
